--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,21 @@
 [submodule "bundle/vim-gitgutter"]
 	path = bundle/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
+[submodule "bundle/--force"]
+	path = bundle/--force
+	url = https://github.com/parsonsmatt/intero-neovim.git
+[submodule "bundle/tabular"]
+	path = bundle/tabular
+	url = https://github.com/godlygeek/tabular.git
+[submodule "bundle/coc.nvim"]
+	path = bundle/coc.nvim
+	url = https://github.com/neoclide/coc.nvim.git
+[submodule "bundle/vim-floaterm"]
+	path = bundle/vim-floaterm
+	url = https://github.com/voldikss/vim-floaterm.git
+[submodule "bundle/vim-airline"]
+	path = bundle/vim-airline
+	url = https://github.com/vim-airline/vim-airline.git
+[submodule "bundle/gruvbox"]
+	path = bundle/gruvbox
+	url = https://github.com/morhetz/gruvbox.git
