removed .DS_STORE, added some plugins

--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,15 @@
 [submodule "bundle/everforest"]
 	path = bundle/everforest
 	url = https://github.com/sainnhe/everforest.git
+[submodule "bundle/vimtex"]
+	path = bundle/vimtex
+	url = https://github.com/lervag/vimtex.git
+[submodule "bundle/vim-go"]
+	path = bundle/vim-go
+	url = https://github.com/fatih/vim-go.git
+[submodule "bundle/vim-surround"]
+	path = bundle/vim-surround
+	url = https://github.com/tpope/vim-surround.git
+[submodule "bundle/ultisnips"]
+	path = bundle/ultisnips
+	url = https://github.com/SirVer/ultisnips.git
