--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,18 @@
 [submodule "bundle/vim-smoothie"]
 	path = bundle/vim-smoothie
 	url = https://github.com/psliwka/vim-smoothie.git
+[submodule "bundle/vim-tmux-navigator"]
+	path = bundle/vim-tmux-navigator
+	url = https://github.com/christoomey/vim-tmux-navigator.git
+[submodule "bundle/html5.vim"]
+	path = bundle/html5.vim
+	url = https://github.com/othree/html5.vim.git
+[submodule "bundle/vim-javascript"]
+	path = bundle/vim-javascript
+	url = https://github.com/pangloss/vim-javascript.git
+[submodule "bundle/vim-svelte"]
+	path = bundle/vim-svelte
+	url = https://github.com/evanleck/vim-svelte.git
+[submodule "bundle/vim-svelte-plugin"]
+	path = bundle/vim-svelte-plugin
+	url = https://github.com/leafOfTree/vim-svelte-plugin.git
