--- a/coc-settings.json
+++ b/coc-settings.json
@@ -27,5 +27,6 @@
     "list.height": 20,
     "codeLens.enable": true,
     "coc.preferences.enableMarkdown": true,
-    "coc.preferences.jumpCommand": "tab drop"
+    "coc.preferences.jumpCommand": "tab drop",
+    "svelte.enable-ts-plugin": true
 }
