--- a/.luarc.json
+++ b/.luarc.json
@@ -1,4 +1,8 @@
 {
     "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
-    "Lua.completion.autoRequire": false
+    "Lua.completion.autoRequire": false,
+    "Lua.diagnostics.globals": [
+        "vim",
+        "packer_bootstrap"
+    ]
 }
